*   WebSite: http://wordrider.net/freerapid             *
*   Mail: info@wordrider.net                            *
*********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

September 2008 - FreeRapid Downloader 0.6 released
  Fixed : remove selected does not select next line in the table (if filter was applied)
  Fixed : partly downloaded files were not deleted at some special cases
  Changed : SwingX library upgraded to version 0.94
  Changed : property "Max downloads at a time" does not require a restart anymore
  Changed : show/hide toolbar action has assigned new shortcut - F11
  Changed : improved internal counting of actual speed
  Changed : double click opens files if completed or opens download information dialog otherwise
  Changed : reworked enabled status of action buttons (resume, cancel, pause) - at least one active -> enabled true
  Added : option to set horizontal and/or vertical lines in table  
  Added : option to repeat error downloads indefinitely (-1 value in UserPreferences dialog)
  Added : new Misc panel in UserPreferences dialog      
  Added : multiple settings dialog (if you select more than 1 file)  
  Added : status info icon in the statusbar - clipboard monitoring (clickable)      
  Added : animated tray icon in busy state (optionable) 
  Added : clipboard monitoring (optionable)
  Added : frame title information (optionable)
  Added : ESC key cancels current download(s)
  Added : new icons in help menu
  Added : link to paypal.com to support this project
  Added : automatic smart saving current queue and downloaded files history
          (if application/OS crashes it preserves everything)
  Added : support for depositfiles.com [thanks to Lukiz!]
  Added : support for megaupload.com [thanks to Lukiz!]