@@ -15,7 +15,7 @@ public class Consts {
     /**
      * Version
      */
-    public static final String VERSION = "0.6";
+    public static final String VERSION = "0.61";
 
     /**
      * verze a jmeno programu
