@@ -56,6 +56,7 @@ checkGenerateTXTDescription.text=Save description into file in text (filename.tx
 checkGenerateDescIon.text=Save description into file in Total Commander compatible (descript.ion) format
 checkGenerateHidden.text=Set generated files as hidden
 
+checkPrepareFile.text=Pre-allocate files
 
 checkProcessFromTop.text=Process downloads from the &top
 
@@ -67,6 +68,7 @@ panelDownloadsSettings.border=Downloads
 panelAppearance.border=Appearance
 panelSound.border=Sound
 panelDesc.border=Description files
+panelAdvanced.border=Advanced
 labelMaxConcurrentDownloads.text=&Max concurrent downloads at a time
 labelRequiresRestart.text=* Effective on restart
 labelErrorAttemptsCount.text=&Error attempts count
